# MCXRD

./: .gitignore  CMakeLists.txt
example/: mo_Ge_3_m11_3_Fridel_129f_M95p3_01_0001.sfrm
inc/parser/: IParseFile.h
src/: main.cpp
theory/: journal.tex
